--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toggle": "^1.1.1",
     "@vercel/analytics": "^1.4.1",
@@ -16,17 +17,17 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.468.0",
-    "next": "14.2.18",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^15.1.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
     "postcss": "^8",
