--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.468.0",
-    "next": "^15.1.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.4.6",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-icons": "^5.4.0",
     "resend": "^4.0.1",
     "tailwind-merge": "^2.5.5",
@@ -31,7 +31,7 @@
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "eslint": "^8",
-    "eslint-config-next": "14.2.18",
+    "eslint-config-next": "^15.4.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
